syntax = "proto3";

import "google/protobuf/any.proto";

package com.spotify.home.dac.viewservice.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.viewservice.v1.proto";

message HomeViewServiceRequest {
  string facet = 1;
  string client_timezone = 2;
  map<string, string> feature_flags = 3;
}